--- a/AppTFG/AppTFG/Paginas/InicioPage.xaml
+++ b/AppTFG/AppTFG/Paginas/InicioPage.xaml
@@ -4,126 +4,86 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pv="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
     Padding="0,0,0,0"
-    BackgroundColor="{DynamicResource PageBackgroundColor}">
-    <ScrollView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-        <StackLayout>
-            <Grid Margin="0,0,0,0">
-                <StackLayout Margin="20,0,20,0" Spacing="20">
-                    <Label FontFamily="BSDBold" FontSize="28" HorizontalOptions="StartAndExpand"
-                        Text="Ha llegado el momento de empezar a crear contenido" TextColor="{DynamicResource SecondaryTextColor}" VerticalOptions="StartAndExpand"
-                        WidthRequest="200" />
-                </StackLayout>
-                <pv:PancakeView Padding="10" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" Margin="0,0,30,0"
-                            BorderThickness="1" CornerRadius="15" Elevation="3" HorizontalOptions="EndAndExpand" WidthRequest="120">
-                    <StackLayout>
-                        <!--<ImageButton Source="mipueblo" Clicked="PuebloClick" BackgroundColor="{DynamicResource TransparentColor}" />-->
-                        <Label FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Mi pueblo" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand" FontFamily="BSDSemiBold">
-                            <!--<Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="PuebloClick"/>
-                            </Label.GestureRecognizers>-->
-                        </Label>
-                    </StackLayout>
-                </pv:PancakeView>
-            </Grid>
-            <pv:PancakeView Margin="0,0,0,0" Padding="30,0,30,30" BackgroundColor="{DynamicResource PageBackgroundColor}" CornerRadius="40,40,0,0"
-                VerticalOptions="FillAndExpand">
-                <StackLayout>
-                    <Label Margin="20" FontSize="20" HorizontalOptions="CenterAndExpand"
-                        HorizontalTextAlignment="Center" Text="¿A dónde quieres ir ahora?" TextColor="{DynamicResource SecondaryTextColor}"
-                        VerticalOptions="Center" FontFamily="BSDSemiBold"/>
-                    <Grid Margin="5" ColumnSpacing="20" RowSpacing="30">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="170" />
-                            <RowDefinition Height="170" />
-                            <RowDefinition Height="170" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <pv:PancakeView Grid.Row="0" Grid.Column="0" Padding="10" BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
-                            BorderThickness="1" CornerRadius="15" Elevation="3">
-                            <StackLayout>
-                                <!--<ImageButton Source="rutas" VerticalOptions="CenterAndExpand" Clicked="RutaClick" BackgroundColor="{DynamicResource TransparentColor}" Margin="0,0,0,15"/>-->
-                                <Label FontFamily="BSDSemiBold" FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Rutas" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand">
-                                    <!--<Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="RutaClick"/>
-                                    </Label.GestureRecognizers>-->
-                                </Label>
-                            </StackLayout>
-                        </pv:PancakeView>
-                        <pv:PancakeView Grid.Row="0" Grid.Column="1" Padding="10" BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
-                            BorderThickness="1" CornerRadius="15" Elevation="3">
-                            <StackLayout>
-                                <!--<ImageButton Source="actividades" VerticalOptions="CenterAndExpand" Clicked="ActividadClick" BackgroundColor="{DynamicResource TransparentColor}"/>-->
-                                <Label FontFamily="BSDSemiBold" FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Actividades" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand">
-                                    <!--<Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="ActividadClick"/>
-                                    </Label.GestureRecognizers>-->
-                                </Label>
-                            </StackLayout>
-                        </pv:PancakeView>
-                        <pv:PancakeView Grid.Row="1" Grid.Column="0" Padding="8" BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
-                            BorderThickness="1" CornerRadius="15" Elevation="3">
-                            <StackLayout>
-                                <!--<ImageButton Source="comercios" VerticalOptions="CenterAndExpand" Clicked="ComercioClick" BackgroundColor="{DynamicResource TransparentColor}"/>-->
-                                <Label FontFamily="BSDSemiBold" FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Comercios" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand">
-                                    <!--<Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="ComercioClick"/>
-                                    </Label.GestureRecognizers>-->
-                                </Label>
-                            </StackLayout>
-                        </pv:PancakeView>
-                        <pv:PancakeView Grid.Row="1" Grid.Column="1" Padding="8" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" 
-                            BorderThickness="1" CornerRadius="15" Elevation="3">
-                            <StackLayout>
-                                <!--<ImageButton Source="alojamientos" VerticalOptions="CenterAndExpand" Clicked="AlojamientoClick" BackgroundColor="{DynamicResource TransparentColor}" Margin="0,0,0,15"/>-->
-                                <Label FontFamily="BSDSemiBold" FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Alojamientos" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand">
-                                    <!--<Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="AlojamientoClick"/>
-                                    </Label.GestureRecognizers>-->
-                                </Label>
-                            </StackLayout>
-                        </pv:PancakeView>
-                        <pv:PancakeView Grid.Row="2" Grid.Column="0" Padding="10" BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
-                            BorderThickness="1" CornerRadius="15" Elevation="3">
-                            <StackLayout>
-                                <!--<ImageButton Source="fotos" VerticalOptions="CenterAndExpand" Clicked="FotoClick" BackgroundColor="{DynamicResource TransparentColor}" />-->
-                                <Label FontFamily="BSDSemiBold" FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Fotos" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand">
-                                    <!--<Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="FotoClick"/>
-                                    </Label.GestureRecognizers>-->
-                                </Label>
-                            </StackLayout>
-                        </pv:PancakeView>
-                        <pv:PancakeView Grid.Row="2" Grid.Column="1" Padding="10" BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
-                            BorderThickness="1" CornerRadius="15" Elevation="3">
-                            <StackLayout>
-                                <!--<ImageButton Source="videos" VerticalOptions="CenterAndExpand" Clicked="VideoClick" BackgroundColor="{DynamicResource TransparentColor}" Margin="0,0,0,15"/>-->
-                                <Label FontFamily="BSDSemiBold" FontSize="20" HorizontalOptions="CenterAndExpand"
-                                    HorizontalTextAlignment="Center" Text="Vídeos" TextColor="{DynamicResource PrimaryTextColor}"
-                                    VerticalOptions="CenterAndExpand">
-                                    <!--<Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="VideoClick"/>
-                                    </Label.GestureRecognizers>-->
-                                </Label>
-                            </StackLayout>
-                        </pv:PancakeView>
-                    </Grid>
-                </StackLayout>
-            </pv:PancakeView>
+    BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
+    Title="Inicio">
+    <StackLayout HorizontalOptions="FillAndExpand" Padding="5,5,5,5">
+        <StackLayout Orientation="Vertical">
+
+            <Label Text="Pueblos" Margin="10, 0, 0, 0" FontSize="Large" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"/>
+            <CollectionView x:Name="clvPueblos" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" 
+                                HorizontalScrollBarVisibility="Never"
+                        ItemsSource="{Binding Pueblos}" SelectedItem="{Binding PuebloSeleccionado}"
+                        SelectionMode="Single" SelectionChangedCommand="{Binding SelectionCommand}">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Horizontal" ItemSpacing="20"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid WidthRequest="135" HeightRequest="195" Padding="0,10">
+                            <pv:PancakeView HasShadow="True" BorderThickness="1" BorderColor="#825060" CornerRadius="23" 
+                                                HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Image Source="{Binding ImagenPrincipal}" Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                    <pv:PancakeView BackgroundColor="{DynamicResource PageBackgroundColor}" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="End">
+                                        <Label Text="{Binding Nombre}" LineBreakMode="NoWrap" VerticalOptions="Center" FontSize="14" TextColor="{DynamicResource SecondaryTextColor}" HorizontalOptions="Start" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                    </pv:PancakeView>
+                                </Grid>
+                            </pv:PancakeView>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            
+            <Label Text="Rutas añadidas" Margin="10, 0, 0, 0" FontSize="Large" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"/>
+            <CollectionView x:Name="clvRutas" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" 
+                                HorizontalScrollBarVisibility="Never"
+                        ItemsSource="{Binding Rutas}" SelectedItem="{Binding RutaSeleccionada}"
+                        SelectionMode="Single" SelectionChangedCommand="{Binding SelectionCommand}">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Horizontal" ItemSpacing="20"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid WidthRequest="135" HeightRequest="195" Padding="0,10">
+                            <pv:PancakeView HasShadow="True" BorderThickness="1" BorderColor="#825060" CornerRadius="23" 
+                                                HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Image Source="{Binding ImagenPrincipal}" Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                    <pv:PancakeView BackgroundColor="{DynamicResource PageBackgroundColor}" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="End">
+                                        <Label Text="{Binding Nombre}" LineBreakMode="NoWrap" VerticalOptions="Center" FontSize="14" TextColor="{DynamicResource SecondaryTextColor}" HorizontalOptions="Start" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                    </pv:PancakeView>
+                                </Grid>
+                            </pv:PancakeView>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <Label Text="Actividades añadidas" Margin="10, 0, 0, 0" FontSize="Large" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"/>
+            <CollectionView x:Name="clvActividades" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" 
+                                HorizontalScrollBarVisibility="Never"
+                        ItemsSource="{Binding Actividades}" SelectedItem="{Binding ActividadSeleccionada}"
+                        SelectionMode="Single" SelectionChangedCommand="{Binding SelectionCommand}">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Horizontal" ItemSpacing="20"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid WidthRequest="135" HeightRequest="195" Padding="0,10">
+                            <pv:PancakeView HasShadow="True" BorderThickness="1" BorderColor="#825060" CornerRadius="23" 
+                                                HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Image Source="{Binding ImagenPrincipal}" Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                    <pv:PancakeView BackgroundColor="{DynamicResource PageBackgroundColor}" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="End">
+                                        <Label Text="{Binding Nombre}" LineBreakMode="NoWrap" VerticalOptions="Center" FontSize="14" TextColor="{DynamicResource SecondaryTextColor}" HorizontalOptions="Start" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                    </pv:PancakeView>
+                                </Grid>
+                            </pv:PancakeView>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
         </StackLayout>
-    </ScrollView>
+    </StackLayout>
 </ContentPage>
